--- a/MillageDataV2.html
+++ b/MillageDataV2.html
@@ -17,7 +17,7 @@
   }
 </style>
 
-<script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3&key=AIzaSyDXxZxWaE1X6aWcphTsHDWEPGSkzXDMpNI"></script>
 
 <script type="text/javascript">
   function initialize() {
@@ -30,8 +30,8 @@
     }
     var mapDiv = document.getElementById('map');
     var map = new google.maps.Map(mapDiv, {
-      center: new google.maps.LatLng(44.99224030205876, -85.77695966716249),
-      zoom: 9,
+      center: new google.maps.LatLng(44.5, -85.77695966716249),
+      zoom: 7,
       mapTypeId: google.maps.MapTypeId.ROADMAP
     });
     map.controls[google.maps.ControlPosition.RIGHT_BOTTOM].push(document.getElementById('googft-legend-open'));
