--- a/MillageDataV2.html
+++ b/MillageDataV2.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport"/>
 <meta content="Michigan Property Tax Map" property="og:title">
-<meta content="/SiteMetaImage.jpg" property="og:image">
+<meta content="https://jjrasche.github.io/MichiganTaxMap/SiteMetaImage.jpg" property="og:image">
 <title>Michigan Property Tax Map</title>
 <style type="text/css">
   html, body, #googft-mapCanvas {
@@ -34,7 +34,7 @@
   }
 </style>
 
-<script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3&key=AIzaSyDXxZxWaE1X6aWcphTsHDWEPGSkzXDMpNI"></script>
 
 <script type="text/javascript">
   function initialize() {
