--- a/MillageDataV3.html
+++ b/MillageDataV3.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <script src="geoxml3.js"></script>
     <title>KML Click Capture Sample</title>
     <style>
       html, body {
@@ -33,13 +34,13 @@
     <div id="capture"></div>
     <script>
       var map;
-      var src = 'https://jjrasche.github.io/MichiganTaxMap/westcampus.kml';
+      var src = 'https://jjrasche.github.io/MichiganTaxMap/schools_locales_modified.kml';
 
       function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: new google.maps.LatLng(-19.257753, 146.823688),
-          zoom: 2,
-          mapTypeId: 'terrain'
+        map = new google.maps.Map(mapDiv, {
+            center: new google.maps.LatLng(44.5, -85.5),
+            zoom: 7,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
         });
 
         var kmlLayer = new google.maps.KmlLayer(src, {
