--- a/MillageDataV3.html
+++ b/MillageDataV3.html
@@ -36,7 +36,7 @@
       var src = 'https://jjrasche.github.io/MichiganTaxMap/schools_locales_modified.kml';
 
       function initMap() {
-        map = new google.maps.Map(mapDiv, {
+        map = new google.maps.Map(document.getElementById('map'), {
             center: new google.maps.LatLng(44.5, -85.5),
             zoom: 7,
             mapTypeId: google.maps.MapTypeId.ROADMAP
