--- a/kmlTest.html
+++ b/kmlTest.html
@@ -17,7 +17,7 @@
        float: left;
        border: thin solid #333;
        }
-      #capture {
+      /* #capture {
        height: 360px;
        width: 480px;
        overflow: hidden;
@@ -25,12 +25,12 @@
        background-color: #ECECFB;
        border: thin solid #333;
        border-left: none;
-       }
+       } */
     </style>
   </head>
   <body>
     <div id="map"></div>
-    <div id="capture"></div>
+    <!-- <div id="capture"></div> -->
     <script>
       var map;
       var src = 'https://jjrasche.github.io/MichiganTaxMap/westcampus.kml';
@@ -47,11 +47,11 @@
           preserveViewport: false,
           map: map
         });
-        kmlLayer.addListener('click', function(event) {
-          var content = event.featureData.infoWindowHtml;
-          var testimonial = document.getElementById('capture');
-          testimonial.innerHTML = content;
-        });
+        // kmlLayer.addListener('click', function(event) {
+        //   var content = event.featureData.infoWindowHtml;
+        //   var testimonial = document.getElementById('capture');
+        //   testimonial.innerHTML = content;
+        // });
       }
     </script>
     <script async defer
