--- a/kmlTest.html
+++ b/kmlTest.html
@@ -5,18 +5,12 @@
     <meta charset="utf-8">
     <title>KML Click Capture Sample</title>
     <style>
-      html, body {
-        height: 370px;
-        padding: 0;
+      html, body, #map {
+        height: 100%;
         margin: 0;
+        padding: 0;
+        width: 100%;
         }
-      #map {
-       height: 360px;
-       width: 300px;
-       overflow: hidden;
-       float: left;
-       border: thin solid #333;
-       }
       /* #capture {
        height: 360px;
        width: 480px;
@@ -33,13 +27,17 @@
     <!-- <div id="capture"></div> -->
     <script>
       var map;
-      var src = 'https://jjrasche.github.io/MichiganTaxMap/westcampus.kml';
+    //   var src = 'https://jjrasche.github.io/MichiganTaxMap/westcampus.kml';
+      var src = 'https://jjrasche.github.io/MichiganTaxMap/schools_locales_modified.kml';
 
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-          center: new google.maps.LatLng(-19.257753, 146.823688),
-          zoom: 2,
-          mapTypeId: 'terrain'
+        //   center: new google.maps.LatLng(-19.257753, 146.823688),
+        //   zoom: 2,
+        //   mapTypeId: 'terrain'
+            center: new google.maps.LatLng(44.5, -85.5),
+            zoom: 7,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
         });
 
         var kmlLayer = new google.maps.KmlLayer(src, {
