--- a/kmlTest.html
+++ b/kmlTest.html
@@ -45,11 +45,9 @@
           preserveViewport: false,
           map: map
         });
-        // kmlLayer.addListener('click', function(event) {
-        //   var content = event.featureData.infoWindowHtml;
-        //   var testimonial = document.getElementById('capture');
-        //   testimonial.innerHTML = content;
-        // });
+        kmlLayer.addListener('click', function(event) {
+          console.log(event);
+        });
       }
     </script>
     <script async defer
