--- a/MillageDataV3.html
+++ b/MillageDataV3.html
@@ -122,7 +122,7 @@
         });
         kmlLayer.addListener('click', function(event) {
           var content = event.featureData.infoWindowHtml;
-          console.log(event);
+          console.log(content);
         });
       }
     </script>
