adding another layer of split up county data.

--- a/MillageDataV4.html
+++ b/MillageDataV4.html
@@ -108,6 +108,10 @@
       var map;
       var src = 'https://jjrasche.github.io/MichiganTaxMap/schools_locales_modified6.kml';
 
+      var handleClickEvent = function(event) {
+          var content = event.featureData.infoWindowHtml;
+          console.log(event);
+        }
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
             center: new google.maps.LatLng(44.5, -85.5),
@@ -115,15 +119,10 @@
             mapTypeId: google.maps.MapTypeId.ROADMAP
         });
 
-        var kmlLayer = new google.maps.KmlLayer(src, {
-          suppressInfoWindows: true,
-          preserveViewport: false,
-          map: map
-        });
-        kmlLayer.addListener('click', function(event) {
-          var content = event.featureData.infoWindowHtml;
-          console.log(event);
-        });
+        var kmlLayer1 = new google.maps.KmlLayer('https://jjrasche.github.io/MichiganTaxMap/schools_locales_modified6.kml', { preserveViewport: false, map: map});
+        kmlLayer1.addListener('click', handleClickEvent);
+        var kmlLayer2 = new google.maps.KmlLayer('https://jjrasche.github.io/MichiganTaxMap/schools_locales_modified7.kml', { preserveViewport: false, map: map});
+        kmlLayer2.addListener('click', handleClickEvent);
       }
     </script>
     <script async defer
