trying to use polystyle to change color.

--- a/MillageDataV4.html
+++ b/MillageDataV4.html
@@ -119,10 +119,10 @@
             mapTypeId: google.maps.MapTypeId.ROADMAP
         });
 
-        var kmlLayer1 = new google.maps.KmlLayer('https://jjrasche.github.io/MichiganTaxMap/kml-data/alcona3.kml', { preserveViewport: false, map: map});
+        var kmlLayer1 = new google.maps.KmlLayer('https://jjrasche.github.io/MichiganTaxMap/kml-data/alcona2.kml', { preserveViewport: false, map: map});
         kmlLayer1.addListener('click', handleClickEvent);
-        var kmlLayer2 = new google.maps.KmlLayer('https://jjrasche.github.io/MichiganTaxMap/kml-data/alger.kml', { preserveViewport: false, map: map});
-        kmlLayer2.addListener('click', handleClickEvent);
+        // var kmlLayer2 = new google.maps.KmlLayer('https://jjrasche.github.io/MichiganTaxMap/kml-data/alger.kml', { preserveViewport: false, map: map});
+        // kmlLayer2.addListener('click', handleClickEvent);
       }
     </script>
     <script async defer
