--- a/MillageDataV3.html
+++ b/MillageDataV3.html
@@ -106,7 +106,7 @@
     </div>    <div id="capture"></div>
     <script>
       var map;
-      var src = 'https://jjrasche.github.io/MichiganTaxMap/kml-data1/data1 copy.kml';
+      var src = 'https://jjrasche.github.io/MichiganTaxMap/kml-data1/data1v2.kml';
 
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
