--- a/MillageDataV4.html
+++ b/MillageDataV4.html
@@ -122,7 +122,8 @@
         var files = ["data1.kml", "data2.kml", "data3.kml", "data4.kml", "data5.kml", "data6.kml"];
         var fileLocation = "https://jjrasche.github.io/MichiganTaxMap/kml-data1/";
         files.forEach(file => {
-            var layer = new google.maps.KmlLayer(fileLocation + file, { preserveViewport: false, map: map});
+            var fileurl = `${fileLocation}${file}?dummy=${(new Date).getTime()}`;
+            var layer = new google.maps.KmlLayer(fileurl, { preserveViewport: false, map: map});
             layer.addListener('click', 
                 function(event) {
                     var content = event.featureData.infoWindowHtml;
