modified all data files to use BGR color setup.

--- a/MillageDataV4.html
+++ b/MillageDataV4.html
@@ -119,7 +119,8 @@
             mapTypeId: google.maps.MapTypeId.ROADMAP
         });
         
-        var files = ["data1.kml", "data2.kml", "data3.kml", "data4.kml", "data5.kml", "data6.kml"];
+        // var files = ["data1.kml", "data2.kml", "data3.kml", "data4.kml", "data5.kml", "data6.kml"];
+        var files = ["data1.kml"];
         var fileLocation = "https://jjrasche.github.io/MichiganTaxMap/kml-data1/";
         files.forEach(file => {
             var fileurl = `${fileLocation}${file}?dummy=${(new Date).getTime()}`;
