--- a/MillageDataV4.html
+++ b/MillageDataV4.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta content="Michigan Property Tax Map" property="og:title">
+    <meta content="https://jjrasche.github.io/MichiganTaxMap/SiteMetaImage.jpg" property="og:image">
     <meta charset="utf-8">
     <title>KML Click Capture Sample</title>
     <style>
